--- a/src/UI/toggleSwitch/ToggleSwitch.css
+++ b/src/UI/toggleSwitch/ToggleSwitch.css
@@ -24,6 +24,10 @@
   background-color: #8e44ad;
 }
 
+.toggle:disabled + .label {
+  background-color: gray;
+}
+
 .ball {
   width: 20px;
   height: 20px;
