--- a/src/UI/toggleSwitch/ToggleSwitch.css
+++ b/src/UI/toggleSwitch/ToggleSwitch.css
@@ -1,8 +1,12 @@
 .toggle-container {
   display: flex;
-  margin: 10px 0;
+
   align-items: center;
   width: 100%;
+}
+.toggle-container span {
+  font-weight: bold;
+  font-size: 14px;
 }
 
 .toggle {
@@ -11,12 +15,11 @@
 
 .label {
   background-color: #d0d0d0;
-  width: 50px;
-  height: 25px;
+  width: 40px;
+  height: 20px;
   border-radius: 50px;
   cursor: pointer;
   display: inline-block;
-
   position: relative;
 }
 
@@ -25,16 +28,16 @@
 }
 
 .toggle:disabled + .label {
-  background-color: gray;
+  background-color: #bbb;
 }
 
 .ball {
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
   background-color: white;
   position: absolute;
-  top: 3px;
-  left: 3px;
+  top: 2.5px;
+  left: 2.5px;
   border-radius: 50%;
   align-items: center;
   justify-content: center;
@@ -50,19 +53,19 @@
     transform: translateX(0) scale(1);
   }
   50% {
-    transform: translateX(15px) scale(1.1);
+    transform: translateX(10px) scale(1.1);
   }
   100% {
-    transform: translateX(25px) scale(1);
+    transform: translateX(18.5px) scale(1);
   }
 }
 
 @keyframes slideOff {
   0% {
-    transform: translateX(25px) scale(1);
+    transform: translateX(18.5px) scale(1);
   }
   50% {
-    transform: translateX(15px) scale(1.1);
+    transform: translateX(10px) scale(1.1);
   }
   100% {
     transform: translateX(0) scale(1);
