--- a/src/UI/loading/Loading.css
+++ b/src/UI/loading/Loading.css
@@ -1,91 +1,55 @@
-.snippet {
-  position: relative;
-  padding: 2rem 5%;
-  margin: 1.5rem 0;
-  border-radius: 0.25rem;
+@keyframes scaling {
+  0%,
+  100% {
+    transform: scale(0.2);
+    background-color: #f2a7a7;
+  }
+  40% {
+    transform: scale(1);
+    background-color: #f2727d;
+  }
+  50% {
+    transform: scale(1);
+    background-color: #f23d4c;
+  }
 }
-.stage {
+
+.loading-container {
+  width: 100%;
+  height: 60vh;
   display: flex;
-  justify-content: center;
   align-items: center;
-  position: relative;
-  padding: 2rem 0;
-  margin: 0 -5%;
-  overflow: hidden;
-}
-.dot-pulse {
-  position: relative;
-  left: -9999px;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: #f2727d;
-  color: #f2727d;
-  box-shadow: 9999px 0 0 -5px #f2727d;
-  animation: dotPulse 1.5s infinite linear;
-  animation-delay: 0.25s;
+  justify-content: center;
+
+  padding: 50px;
 }
 
-.dot-pulse::before,
-.dot-pulse::after {
-  content: "";
+.dot-loading {
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  transform: scale(0);
+  background-color: red;
+  animation: scaling 2.5s ease-in-out infinite;
   display: inline-block;
-  position: absolute;
-  top: 0;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: #f2727d;
-  color: #f2727d;
+  margin: 0.5rem;
 }
 
-.dot-pulse::before {
-  box-shadow: 9984px 0 0 -5px #f2727d;
-  animation: dotPulseBefore 1.5s infinite linear;
+.dot-loading:nth-child(0) {
   animation-delay: 0s;
 }
-
-.dot-pulse::after {
-  box-shadow: 10014px 0 0 -5px #f2727d;
-  animation: dotPulseAfter 1.5s infinite linear;
-  animation-delay: 0.5s;
+.dot-loading:nth-child(1) {
+  animation-delay: 0.2s;
 }
-
-@keyframes dotPulseBefore {
-  0% {
-    box-shadow: 9984px 0 0 -5px #f2727d;
-  }
-  30% {
-    box-shadow: 9984px 0 0 2px #f2727d;
-  }
-  60%,
-  100% {
-    box-shadow: 9984px 0 0 -5px #f2727d;
-  }
+.dot-loading:nth-child(2) {
+  animation-delay: 0.4s;
 }
-
-@keyframes dotPulse {
-  0% {
-    box-shadow: 9999px 0 0 -5px #f2727d;
-  }
-  30% {
-    box-shadow: 9999px 0 0 2px #f2727d;
-  }
-  60%,
-  100% {
-    box-shadow: 9999px 0 0 -5px #f2727d;
-  }
+.dot-loading:nth-child(3) {
+  animation-delay: 0.6s;
 }
-
-@keyframes dotPulseAfter {
-  0% {
-    box-shadow: 10014px 0 0 -5px #f2727d;
-  }
-  30% {
-    box-shadow: 10014px 0 0 2px #f2727d;
-  }
-  60%,
-  100% {
-    box-shadow: 10014px 0 0 -5px #f2727d;
-  }
+.dot-loading:nth-child(4) {
+  animation-delay: 0.8s;
+}
+.dot-loading:nth-child(5) {
+  animation-delay: 1s;
 }
